Since jenkins moved to jdk17 - MaxPermSize is removed from it